--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "axios": "^0.16.2",
+    "html-webpack-plugin": "^2.29.0",
+    "json-server": "^0.11.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-router-dom": "^4.0.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.0.10",
+    "react-transition-group": "^2.2.0",
+    "webpack": "^2.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
